# 0002-datastructures-algorithms

./: README.md
data-structure-c/: CMakeLists.txt
data-structure-c++/: CMakeLists.txt
data-structure-c++/01-linear-list/05-hashmap/: hashmap.h
data-structure-c++/02-nonlinear-list/01-matrix/03-sparse-matrix/: main.cpp  readme.md  sparsematrix.cpp  sparsematrix.h
data-structure-c++/02-nonlinear-list/02-string/01-seq-string/: main.cpp  seqstring.cpp  seqstring.h
data-structure-c++/02-nonlinear-list/03-generated-list/: generatedlist.cpp  generatedlist.h  main.cpp
data-structure-c/01-linear-list/: linearlist.h
data-structure-c/01-linear-list/02-linked-list/: linknode.h
data-structure-c/01-linear-list/02-linked-list/01-singly-linked-list/01-singly-linked-list-with-sentinel/: main.c  singlylinkedlist.c  singlylinkedlist.h
data-structure-c/01-linear-list/02-linked-list/01-singly-linked-list/51-polynomial/: main.c  polynomial.c  polynomial.h
data-structure-c/01-linear-list/02-linked-list/02-circular-list/02-circular-list-with-tail/: circularlistwithtail.c  circularlistwithtail.h  main.c
data-structure-c/01-linear-list/02-linked-list/03-doubly-linked-list/01-doubly-linked-list-without-sentinel/: doublylinkedlist.c  doublylinkedlist.h  main.c
data-structure-c/01-linear-list/02-linked-list/04-static-list/: main.c  staticlist.c  staticlist.h
data-structure-c/01-linear-list/02-linked-list/51-josephus-problem/: main.c
data-structure-c/01-linear-list/03-stack/: stack.h
data-structure-c/01-linear-list/03-stack/01-sequential-stack/: main.c  sequentialstack.c  sequentialstack.h
data-structure-c/01-linear-list/03-stack/02-linked-stack/: linkedstack.c  linkedstack.h  main.c
data-structure-c/01-linear-list/03-stack/03-multiple-stack/01-double-stack/: doublestack.c  doublestack.h  main.c
data-structure-c/01-linear-list/03-stack/51-match-brackets/: main.c  matchbrackets.c  matchbrackets.h
data-structure-c/01-linear-list/03-stack/52-polynomial-airthmetic/: infixtosuffix.c  infixtosuffix.h  linedlistforoperator.c  linedlistforoperator.h  linkedlist.c  linkedlist.h  main.c  polynomialairthmetic.c  polynomialairthmetic.h
data-structure-c/01-linear-list/04-queue/: queue.h
data-structure-c/01-linear-list/04-queue/01-queue/01-sequential-queue/: main.c  sequentialqueue.c  sequentialqueue.h
data-structure-c/01-linear-list/04-queue/01-queue/02-linked-queue/: linkedqueue.c  linkedqueue.h  main.c
data-structure-c/01-linear-list/04-queue/01-queue/03-circular-queue/: circularqueue.c  circularqueue.h
data-structure-c/01-linear-list/04-queue/01-queue/04-priority-queue/: main.c  priorityqueue.c  priorityqueue.h
data-structure-c/01-linear-list/04-queue/51-pascal-triangle/: main.c  pascaltriangle.c  pascaltriangle.h
data-structure-c/01-linear-list/05-skip-list/: skiplist.c  skiplist.h
data-structure-c/02-nonlinear-list/01-matrix/01-ordinary-matrix/: main.c  ordinarymatrix.c  ordinarymatrix.h
data-structure-c/02-nonlinear-list/01-matrix/02-particular-matrix/: readme.md
data-structure-c/02-nonlinear-list/01-tree/01-fundamental-tree/01-fundamental-tree-list/: fundamentaltree.c  main.c
data-structure-c/02-nonlinear-list/01-tree/01-fundamental-tree/02-fundamental-tree-array/: fundamentaltree.c  main.c
data-structure-c/02-nonlinear-list/01-tree/02-binary-tree/02-binary-search-tree/: binarysearchtree.c  binarysearchtree.h  main.c
data-structure-c/02-nonlinear-list/02-tree/01-fundamental-tree/01-fundamental-tree-list/: fundamentaltree.h
data-structure-c/02-nonlinear-list/02-tree/01-fundamental-tree/01-fundamental-tree-storage/: readme.md
data-structure-c/02-nonlinear-list/02-tree/02-binary-tree/01-binary-tree-recursive-print/: main.c
data-structure-c/02-nonlinear-list/02-tree/02-binary-tree/01-binary-tree-save/: fundamentaltree.h
data-structure-c/02-nonlinear-list/02-tree/02-binary-tree/02-binary-tree-non-recursive-print/: binarytreenonrecursive.c  binarytreenonrecursive.h
data-structure-c/02-nonlinear-list/02-tree/02-binary-tree/04-binary-search-tree/: binarysearchtree.c  binarysearchtree.h
data-structure-c/02-nonlinear-list/02-tree/02-binary-tree/04-binary-tree-confirm/: binarytreeconfirm.c  binarytreeconfirm.h  main.c
data-structure-c/02-nonlinear-list/02-tree/02-binary-tree/05-binary-search-tree/: binarysearchtree.c  binarysearchtree.h  main.c  readme.md  treenodequeue.c  treenodequeue.h
data-structure-c/02-nonlinear-list/02-tree/02-binary-tree/07-heap/: heap.c  heap.h  main.c  readme.md
data-structure-c/02-nonlinear-list/03-string/01-string-match-algorithm/: readme.md
data-structure-c/02-nonlinear-list/03-string/01-string-match-algorithm/01-bf/: bfmatch.c  bfmatch.h  main.c
data-structure-c/02-nonlinear-list/03-string/01-string-match-algorithm/02-rk/: main.c  rkmatch.c  rkmatch.h
data-structure-c/02-nonlinear-list/03-string/01-string-match-algorithm/03-bm/: bmmatch.c  bmmatch.h  main.c
data-structure-c/02-nonlinear-list/03-string/01-string-match-algorithm/04-kmp/: kmpstring.c  kmpstring.h  main.c
data-structure-c/02-nonlinear-list/05-graph/01-graph-storage-representation/: graph.h
data-structure-c/02-nonlinear-list/05-graph/02-graph-traverse-and-shortest-path/01-breadth-first/: breadthfirsttraverse.c  breadthfirsttraverse.h  main.c
data-structure-c/02-nonlinear-list/05-graph/02-graph-traverse-and-shortest-path/02-depth-first/: depthfirsttraverse.c  depthfirsttraverse.h  main.c
data-structure-c/02-nonlinear-list/05-graph/02-graph-traverse/01-breadth-first/: breadthfirsttraverse.c  breadthfirsttraverse.h  main.c
data-structure-c/02-nonlinear-list/05-graph/04-minimum-spanning-tree/: readme.md
data-structure-c/02-nonlinear-list/06-set/01-UFSet/: main.c  ufset.c  ufset.h
data-structure-c/51-recursion/01-fibonacci-sequence/01-fibonacci-sequence-recursion/: fibonacci.c
data-structure-c/51-recursion/01-fibonacci-sequence/02-fibonacci-sequence-non-recursion/: fibonacci.c
data-structure-c/51-recursion/01-fibonacci-sequence/03-fibonacci-sequence-stack/: fibonacci.h  main.c  stack.c  stack.h
(+87 files in other folders)
